--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "diyar faraj official",
   "main": "index.js",
+  "homepage": "https://diyarfaraj.github.io/new-pp-site",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css --recursive"
+    "sass": "node-sass -w scss/ -o dist/css --recursive",
+    "deploy":"gh-pages -d dist"
   },
   "author": "Diyar Faraj",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1"
   }
 }
