--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "homepage": "https://diyarfaraj.github.io/new-pp-site",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css --recursive",
+    "sass": "sass --watch scss:dist/css",
+    "sass:build": "sass scss/man.scss dist/css/main.css",
     "deploy": "gh-pages -d dist"
   },
   "author": "Diyar Faraj",
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^3.2.3",
-    "node-sass": "^7.0.1"
+    "sass": "^1.93.3"
   }
 }
